--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,11 @@ set (CMAKE_MODULE_PATH "D:\\Program Files\\JetBrains\\SFML-2.4.2\\cmake\\Modules
 find_package(SFML 2.4 COMPONENTS system window graphics audio REQUIRED)
 include_directories(${SFML_INCLUDE_DIR})
 
-
 set(SOURCE_FILES main.cpp BaseState.h EventManager.h EventManager.cpp Game.h Game.cpp Mushroom.png
         arial.ttf intro.png keys.cfg StateManager.h StateManager.cpp SharedContext.h State_Game.h State_Game.cpp
         State_Intro.h State_Intro.cpp State_MainMenu.h State_MainMenu.cpp State_Paused.cpp State_Paused.h Window.h
         Window.cpp EnumHasher.h intro.png Utilities.h ResourceManager.h TextureManager.h Textures.cfg
-        MainShip.sheet)
+        MainShip.sheet SpriteSheet.cpp SpriteSheet.h Anim_Base.cpp Anim_Base.h Anim_Directional.cpp Anim_Directional.h
+        Direction.h shlwapi.lib)
 add_executable(ColdSpace ${SOURCE_FILES})
-target_link_libraries(ColdSpace ${SFML_LIBRARIES})
+target_link_libraries(ColdSpace ${SFML_LIBRARIES} shlwapi.lib)
