Fixed errors and typos

--- a/Textures.cfg
+++ b/Textures.cfg
@@ -1,6 +1,6 @@
 Intro media/Textures/intro.png
-MainShipSprite media/Textures/MainShipSheet.png
-PrismSprite media/Textures/PrismSheet.png
+PlayerSprite media/Textures/PlayerSheet.png
+RatSprite media/Textures/RatSheet.png
 TileSheet media/Textures/tilesheet.png
 Bg1 media/Textures/bg1.png
 Bg2 media/Textures/bg2.png
