--- a/keys.cfg
+++ b/keys.cfg
@@ -10,5 +10,6 @@ Key_O 5:14
 Key_X 5:23
 Player_MoveLeft 24:0
 Player_MoveRight 24:3
-Player_Jump 5:57
+Player_MoveUp 24:22
+Player_MoveDown 24:18
 Player_Attack 24:58
