Movement Testing halted, Fog of war added. Awaiting testing.

--- a/textures.cfg
+++ b/textures.cfg
@@ -3,3 +3,5 @@ PlayerSprite media/Textures/PlayerSheet.png
 SkeletonSprite media/Textures/SkeletonSheet.png
 TileSheet media/Textures/tilesheet.png
 TestGUIBg media/Textures/ADOM-OGA-UI.png
+BlackCell media/Textures/BlackFog.png
+GreyCell media/Textures/GreyFog.png
