--- a/textures.cfg
+++ b/textures.cfg
@@ -5,3 +5,4 @@ TileSheet media/Textures/tilesheet.png
 TestGUIBg media/Textures/ADOM-OGA-UI.png
 BlackCell media/Textures/BlackFog.png
 GreyCell media/Textures/GreyFog.png
+HeartBar media/Textures/HeartBar.png
