Tested and calibrated. Ready to deliver

--- a/audio.cfg
+++ b/audio.cfg
@@ -5,5 +5,5 @@ Grunt media/Audio/gruntsound.ogg
 Swish media/Audio/swish.ogg
 Impact media/Audio/impact.ogg
 PlayerDeath media/Audio/death.ogg
-Electrix media/Audio/Electrix_NES.ogg
-TownTheme media/Audio/TownTheme.ogg
+Intro media/Audio/Intro.ogg
+BattleTheme media/Audio/Battle.ogg
