--- a/textures.cfg
+++ b/textures.cfg
@@ -1,6 +1,8 @@
-Intro media/Textures/intro.png
+Intro media/Textures/Intro.png
+IntroBackground media/Textures/Battle.png
 PlayerSprite media/Textures/PlayerSheet.png
-SkeletonSprite media/Textures/SkeletonSheet.png
+AllySprite media/Textures/AllySheet.png
+EnemySprite media/Textures/EnemySheet.png
 TileSheet media/Textures/tilesheet.png
 TestGUIBg media/Textures/ADOM-OGA-UI.png
 BlackCell media/Textures/BlackFog.png
